--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,7 @@
 use_frameworks!
 
 platform :ios, '11.0'
+install! 'cocoapods', :deterministic_uuids => false
 
 target 'ShareTripSDK_Example' do
   pod 'ShareTripSDK', :path => '../'
